fixes box model for first two rows on small devices

--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@
 
 body, header, nav, footer, section, article, div, .container, .topright, .missiontext {
 border: 1px solid red !important;
-}
+}*/
 /* this sets up a border to easily see our columns settup */
 
 * {
@@ -38,27 +38,17 @@ body {
 }
 
 header {
-    background-color: #FBFBFB;
+    background-color: #fbfbfb;
     max-width: 100%;
     display: flex;
     flex-wrap: wrap;
 }
 
 .nameplate {
-    text-align: center;
-    position: absolute;
-    top: 500px;
-    bottom: 0;
-    width: inherit;
-    background-color: hsla(212, 80%, 42%, 0.28);
+    text-align: left;
+    position: relative;
+    background-color: #fbfbfb;
     font-size: 2em;
-}
-
-.logo {
-    position: absolute;
-    top: 100px;
-    width: inherit;
-    background-color: hsla(212, 80%, 42%, 0.28);
 }
 
 .row {
@@ -66,7 +56,7 @@ header {
     flex-wrap: wrap;
     margin-left: 0;
     margin-right: 0;
-/* this is an alternative to box sizing for ensuring the boxes go inline */;
+/* this is an alternative to box sizing for ensuring the boxes go inline */
 }
 
 p {
@@ -94,8 +84,13 @@ h2 {
 h3 {
     text-transform: none;
     font-family: 'Quicksand', sans-serif;
-    font-size: 20px;
-    padding: 10px;
+    border: 10px;
+    color: #42A5F5;
+}
+
+h4 {
+    text-transform: none;
+    font-family: 'Quicksand', sans-serif;
     border: 10px;
     color: #42A5F5;
 }
@@ -118,24 +113,32 @@ hr {
       max-width: 414px;
       min-width: 320px;
       overflow: hidden;
+      color: #fbfbfb;
+      margin: 0 auto;
+      left: 0;
+      right: 0;
+      text-align: center;
+      font-family: 'Great Vibes', cursive;
+}
+
+    .logo {
+      position: relative;
+      z-index: 2;
+      max-width: 75px;
+      min-width: 75px;
+      width:40%;
+      overflow: hidden;
       background: hsla(212, 80%, 42%, 0.29);
       color: #fbfbfb;
       margin: 0 auto;
       left: 0;
       right: 0;
-      text-align: -webkit-center;
-      font-family: 'Great Vibes', cursive;
 }
 
 /*/*    font-family: 'Great Vibes', cursive;*/
 
-@media screen and (max-width: 425px) {
-    .nameplate {
-        position: relative;
-        top: 0px;
-        width: inherit;
+@media screen and (max-width: 380px) {
 
-        background-color: #fbfbfb;
     }
 
     h1 {
@@ -146,4 +149,12 @@ hr {
         font-size: 20px;
     }
 
-
+/*.nameplate {
+    text-align: center;
+    position: absolute;
+    top: 500px;
+    bottom: 0;
+    width: inherit;
+    background-color: hsla(212, 80%, 42%, 0.28);
+    font-size: 2em;
+*/
